Default to Java 8 on Ubuntu 14.04

--- a/ubuntu/standard/Dockerfile.template
+++ b/ubuntu/standard/Dockerfile.template
@@ -55,7 +55,8 @@ RUN update-alternatives --set java /usr/lib/jvm/java-$(DEFAULT_JDK_VERSION)-open
 ENV JAVA_HOME_7_X64=/usr/lib/jvm/java-7-openjdk-amd64 \
     JAVA_HOME_8_X64=/usr/lib/jvm/java-8-openjdk-amd64 \
     JAVA_HOME_$(ADDITIONAL_JDK_VERSION)_X64=/usr/lib/jvm/java-$(ADDITIONAL_JDK_VERSION)-openjdk-amd64 \
-    JAVA_HOME=/usr/lib/jvm/java-$(DEFAULT_JDK_VERSION)-openjdk-amd64
+    JAVA_HOME=/usr/lib/jvm/java-$(DEFAULT_JDK_VERSION)-openjdk-amd64 \
+    JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8
 
 # Install Java Tools (Ant, Gradle, Maven)
 RUN apt-get update \
@@ -73,8 +74,7 @@ RUN apt-get update \
  && rm -rf /var/lib/apt/lists/*
 ENV ANT_HOME=/usr/share/ant \
     GRADLE_HOME=/usr/share/gradle \
-    M2_HOME=/usr/share/maven \
-    JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8
+    M2_HOME=/usr/share/maven
 
 # Install Go
 RUN curl -sL https://dl.google.com/go/go1.8.6.linux-amd64.tar.gz -o go1.8.6.linux-amd64.tar.gz \
