--- a/ubuntu/standard/Dockerfile.template
+++ b/ubuntu/standard/Dockerfile.template
@@ -117,7 +117,7 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
     powershell \
  && rm -rf /var/lib/apt/lists/*
 
-# Install Mysql Client
+# Install Mysql
 RUN apt-get update \
  && apt-get install mysql-client -y
 ENV mysql=/usr/bin/mysql
