--- a/ubuntu/16.04/standard/Dockerfile
+++ b/ubuntu/16.04/standard/Dockerfile
@@ -1,13 +1,5 @@
 FROM microsoft/vsts-agent:ubuntu-16.04
 
-# Install Ruby requirements
-RUN apt-get update \
- && apt-get install -y libz-dev openssl libssl-dev \
- && gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB \
- && apt-add-repository -y ppa:rael-gc/rvm \
- && apt-get update \
- && apt-get install -y --no-install-recommends rvm
- 
 # Install basic command-line utilities
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
@@ -176,7 +168,7 @@ RUN apt-get update \
     python3-pip \
  && rm -rf /var/lib/apt/lists/*
 
-# Install Ruby requirements
+# Install Ruby tools
 RUN apt-get update \
  && apt-get install -y libz-dev openssl libssl-dev \
  && gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB \
